# PyPIHelloWorld

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: __init__.py  first.py  main.py  mainPyPIHelloWorld.py  pyPPHelloWorld.py
src/PyPIHellowWorld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
