[metadata]
name = PyPIHelloWorld
version = 1.1.0
author = Irfan Ullah
author_email = sahibzada.iu@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sahibzada-irfanullah/PyPIHelloWorld
project_urls =
    Bug Tracker = https://github.com/sahibzada-irfanullah/PyPIHelloWorld/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src